fix: Use hardcoded service account for GKE authentication
- Change from variable service account to hardcoded github-actions@mmn-ai.iam.gserviceaccount.com
- This matches the working configuration in mcp-neo4j project

--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -36,7 +36,7 @@ jobs:
       uses: google-github-actions/auth@v2
       with:
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
-        service_account: github-actions@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+        service_account: github-actions@mmn-ai.iam.gserviceaccount.com
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
