fix: Add TLS configuration to ingress for HTTPS support
- Add tls section to ingress specification with secretName reference
- This resolves GKE ingress error about both HTTP and HTTPS being disabled
- Now supports HTTPS traffic while maintaining kubernetes.io/ingress.allow-http: false
- Static IP addresses created: mcp-neo4j-ip (34.54.166.8) and brave-search-mcp-ip (34.8.165.75)

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -9,6 +9,10 @@ metadata:
     networking.gke.io/managed-certificates: "brave-search-mcp-cert"
     kubernetes.io/ingress.allow-http: "false"
 spec:
+  tls:
+  - hosts:
+    - INGRESS_HOST
+    secretName: brave-search-mcp-cert-secret
   rules:
   - host: INGRESS_HOST
     http:
