refactor: Use shared cluster-specific static IP address
- Replace brave-search-mcp-ip with prod-autopilot-us-central-ip
- This allows both projects to share the same global static IP (34.54.166.8)
- Enables wildcard domain configuration in Cloudflare DNS
- Reduces GCP costs by using single static IP for the entire cluster

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: mcp
   annotations:
     kubernetes.io/ingress.class: "gce"
-    kubernetes.io/ingress.global-static-ip-name: "brave-search-mcp-ip"
+    kubernetes.io/ingress.global-static-ip-name: "prod-autopilot-us-central-ip"
     networking.gke.io/managed-certificates: "brave-search-mcp-cert"
     kubernetes.io/ingress.allow-http: "false"
 spec:
