--- a/k8s/overlays/production/backend-config.yaml
+++ b/k8s/overlays/production/backend-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: cloud.google.com/v1
 kind: BackendConfig
 metadata:
-  name: brave-search-mcp-backend-config
+  name: brave-mcp-backend-config
   namespace: mcp
 spec:
   timeoutSec: 30
@@ -16,5 +16,5 @@ spec:
     healthyThreshold: 1
     unhealthyThreshold: 3
     type: HTTP
-    requestPath: /ping
+    requestPath: /health
     port: 8080
