adds optional stateless configuration (#222)
* optional statelessness

* Update config.ts

* Update docker-compose.yml

* Update documentation

---------

Co-authored-by: Harold Spencer Jr. <hspencer@brave.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - BRAVE_API_KEY
       - BRAVE_MCP_TRANSPORT=http
       - BRAVE_MCP_PORT=8080
+      - BRAVE_MCP_STATELESS
       - BRAVE_MCP_HOST=0.0.0.0
       - BRAVE_MCP_LOG_LEVEL=info
       - BRAVE_MCP_ENABLED_TOOLS
